@@ -1,4 +1,4 @@
 DIST plexus-i18n-1.0.tar.bz2 9204 RMD160 ceb804beedf135fa197f6a3f05a4dac304e6231f SHA1 2f1fb084f32e39ef9d0ad1279e2924ed8fde5ded SHA256 2266b7fffb2751e78c6e78d6e64c8c87ab100e35a4d0382b53f39aa567b58102
-EBUILD plexus-i18n-1.0.ebuild 678 RMD160 ae5f62e8ff7e53cc42143d52de85d99beb319d3a SHA1 20ab40c17a7e571ed8a4ed594582c4540e546333 SHA256 34afc2fc79db3fc0503dce90e2dbb2c2c3564ca87f04447a906c5710e13eb1e5
-MISC ChangeLog 454 RMD160 3a7ebaa8b7e578fb77db4c2a1e106acf7548ddb7 SHA1 53e20fdf52ae3ab7458d05746e62267f2915cf0d SHA256 64c0a084e7eb1e30a838cc4690f611cdfee667e34c5ae53d90d5d962e52720ca
+EBUILD plexus-i18n-1.0.ebuild 883 RMD160 f38d6db915bf282f18e31cde725e347648af219f SHA1 afdff23590198307bfd2ce4d7382bdd28e972790 SHA256 50a1a0db3c683218edbdd44f198d6afe9a31be3526cb8563e1c96334c0e46960
+MISC ChangeLog 566 RMD160 832be91b690cbde54611c9577cefeb29349b1422 SHA1 d4c0a06ad5329f13d18b21a10da08730b6bc2488 SHA256 fc01ad5a315f3c94c288a2976030666a9ba3f39639e45af2a32745a115fc8a64
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
